--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "tsc":"tsc",
+    "tsc": "tsc",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
