--- a/package.json
+++ b/package.json
@@ -2,6 +2,14 @@
   "name": "form",
   "version": "0.1.0",
   "private": true,
+  "peerDependencies": {
+    "@material-ui/core": "^4.9.0",
+    "@material-ui/icons": "^4.5.1",
+    "formik": "^2.1.1",
+    "lodash": "^4.17.15",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -10,8 +18,9 @@
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-forms": "github:mithyalabs/react-forms",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4",
